cloudformation/infra-ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Criando um EC2 para executar um microsservico"
Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: seg-local-lab-localstack
      GroupDescription: SecurityGroup para o EC2 do Spring Boot
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          sudo yum install java-17-amazon-corretto -y
      ImageId: ami-03a6eaae9938c858c # AMI for your region and preference
      KeyName: kp-local-lab-localstack # Chave deve ser criada antes de executar o script
      BlockDeviceMappings:
        - DeviceName: /dev/sdh
          Ebs:
            VolumeSize: 8
            VolumeType: gp2
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: ec2-local-lab-localstack # name of your instance
      IamInstanceProfile: LabInstanceProfile

Outputs:
  SecurityGroupId:
    Description: ID do Security Group recém-criado
    Value: !GetAtt EC2SecurityGroup.GroupId
    Export:
      Name: SegLocalLabLocalstack  # Escolha um nome exclusivo para a exportação
